Changes in posts and cookie policy + Added Mathjax support

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -18,6 +18,9 @@ class: 'page-template'
             {{ include navigation.html }}
         {% endif %}
     </nav>
+    <script type="text/javascript"
+    src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+</script>
 </header>
 
 <main class="content" role="main">
