--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,7 +36,10 @@
 
     <!-- [[! Ghost outputs important style and meta data with this tag ]] -->
     {% include head.html %}
-
+    <main class="content" role="main">
+      <script type="text/javascript"
+         src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+     </script>
 </head>
 <body class="{% if paginator.page > 1 %}paged archive-template{% elsif page.class %}{{ page.class }}{% else %}home-template{% endif %} nav-closed">
 
