--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -18,9 +18,11 @@ class: 'post-template'
             <a class="menu-button icon-menu" href="#"><span class="word">Menu</span></a>
         {% endif %}
     </nav>
+    <main class="content" role="main">
+      <script type="text/javascript"
+         src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+     </script>
 </header>
-
-<main class="content" role="main">
 
     <article class="{{ page.subclass }}">
 
